fix(scrollbar): show scrollbar on hover

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ body.scrolling-visibility-hide *::-webkit-scrollbar {
 }
 
 /* Hide scrollbar temporarily */
-body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar,
-body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar-thumb,
-body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar-track {
+body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar:not(:hover),
+body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar-thumb:not(:hover),
+body.scrolling-visibility-scroll *:not(.scrolling-show-temporary)::-webkit-scrollbar-track:not(:hover) {
     background: transparent !important;
 }
 
